# waypanel

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  debug.sh  install  main.py  post_install.sh  pyproject.toml  requirements.txt  run.py  setup.py  waypanel  waypanel.sh
.github/workflows/: waypanel.yml
config/: cmd.toml  config.toml  custom.css  dockbar.toml  menu.toml  panel.toml  style.css  styles.css  t.py  workspacebar.toml
config/scripts/: mullvad-connect.py  workspaces.py
config/shaders/: view-effect.shader
config/themes/: adwaita.css  base.css  basic.css  catppuccin-mocha.css  dark.css  gnome.css  gruvbox-neumorphism.css  gruvbox.css  light.css  macos-dark.css  material-black.css  tokyo-night.css  tokyonight.css  windows.css
docs/: ABOUT.md  PLUGIN.md
patches/: scale.patch
scripts/: waypanel
src/: panel.py
src/core/: background.py  create_panel.py  dashboard.py  log_setup.py  plugin_loader.py  utils.py
src/ipc/: client.py  ipc_async_server.py  ipc_client.py  send_commands.py  server.py  utils.py
src/plugins/: bookmarksPopover.py  clipboardMenu.py  dashboardBluetooth.py  dashboardPopover.py  dashboardSoundCard.py  dashboardSystem.py  dockbar.py  folders.py  launcherMenu.py  main_example.py  wallpaperPopover.py
src/shared/: command_runner.py  concurrency_helper.py  config_handler.py  config_template.py  data_helpers.py  dbus_helpers.py  gtk_helpers.py  install_helpers.py  notify_send.py  path_handler.py  wayfire_helpers.py
stage/: README.md
tools/: README.md  control-center.py  scraper.py
waypanel/: __init__.py  main.py
(+509 files in other folders)
