[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waypanel"
version = "0.9.8"
authors = [{ name = "killown", email = "systemofdown@gmail.com" }]
description = "A Wayfire panel that behaves like a shell"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/killown/waypanel" }

[project.optional-dependencies]
dev = ["pygobject-stubs[Gtk4,Gdk]"]

[project.scripts]
waypanel = "waypanel.run:main"

[tool.setuptools]
packages = ["waypanel"]
package-dir = { "waypanel" = "." }
include-package-data = true

[tool.setuptools.package-data]
"waypanel" = ["src/**/*", "config/*", "*.txt", "*.md"]
